Fix svg circle position problem on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -699,7 +699,7 @@ a {
 }
 
 .engineering-drawing-mobile {
-    width: 100%;
+    max-width: 100%;
     max-height: 850px;
     display: block;
     object-fit: contain;
